Translate into Russian

--- a/week_0_recurrence.ipynb
+++ b/week_0_recurrence.ipynb
@@ -4,19 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compute integrals of the form\n",
+    "Вычислите интеграл\n",
     "\n",
     "$$\n",
     "I_n = \\int_0^1 x^n e^{1-x}\\, dx\\;.\n",
     "$$\n",
     "\n",
-    "Integrating by parts, we obtain a recurrence relation\n",
+    "Интегрированием по частям приходим к рекурентному соотношению\n",
     "\n",
     "$$\n",
     "I_n = n I_{n-1} - 1 \\;,\n",
     "$$\n",
     "\n",
-    "with the initial condition\n",
+    "с начальным условием\n",
     "\n",
     "$$\n",
     "I_0 = e - 1\\;.\n",
@@ -27,7 +27,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "These integrals can be computed using symbolic maths with `sympy`:"
+    "Такие интегралы могут быть вычислены при помощи символьной библотеки `sympy`:"
    ]
   },
   {
@@ -48,10 +48,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Use the recurrence relation to compute these integrals  from $n=0$ up to $n = 24$ inclusive. \n",
+    "Вычислите интеграл, используя рекурентное соотношение от $n=0$ до $n = 24$ включительно.\n",
     "\n",
-    "\n",
-    "First, use the upwards recursion, from $n=1$ upwards. Your code below must product a list of the 25 values of the integrals."
+    "В начале используйте рекурсию с $n=1$ вверх. Ваш алгоритм должен составлять список из 25 значений интеграла."
    ]
   },
   {
@@ -63,7 +62,7 @@
    "outputs": [],
    "source": [
     "def upwards_recursion(n):\n",
-    "    \"\"\"Compute the integrals using the upwards recursion.\"\"\"\n",
+    "    \"\"\"Вычисляет интеграл, используя рекурсию вверх.\"\"\"\n",
     "    # ENTER YOUR CODE HERE"
    ]
   },
@@ -71,7 +70,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Compare your results with the exact values. Discuss"
+    "Сравните результаты с точным ответом. Обсудите"
    ]
   },
   {
@@ -105,7 +104,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Next, use the downwards recursion. Your code below must produce a list of the 25 values of the integrals, from 0 to 24."
+    "Далее используйте рекурсию вниз. Ваш алгоритм должен составлять список из 25 значений интеграла, с 0 до 24."
    ]
   },
   {
@@ -117,6 +116,7 @@
    "outputs": [],
    "source": [
     "def downwards_recursion(n):\n",
+    "    \"\"\"Вычисляет интеграл, используя рекурсию вниз.\"\"\"\n",
     "    # ENTER YOUR CODE HERE"
    ]
   },
@@ -126,7 +126,7 @@
     "collapsed": true
    },
    "source": [
-    "Repeat the comparison with the exact values. Discuss."
+    "Также сравните ответ с точным значением. Обсудите."
    ]
   },
   {
@@ -157,7 +157,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
