--- a/week_1_LU_pivoting.ipynb
+++ b/week_1_LU_pivoting.ipynb
@@ -4,16 +4,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. $LU$ factorization of a square matrix"
+    "# I. $LU$ разложение квадратной матрицы"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a simple naive implementation of the LU decomposition. \n",
+    "Рассмотрим наивную реализацию LU разложения.  \n",
     "\n",
-    "Note that we're using the `numpy` arrays to represent matrices [do **not** use `np.matrix`]."
+    "Заметим, что мы используем массивы `numpy` для представления матриц. [Не используйте 'np.matrix']."
    ]
   },
   {
@@ -27,10 +27,10 @@
     "import numpy as np\n",
     "\n",
     "def diy_lu(a):\n",
-    "    \"\"\"Construct the LU decomposition of the input matrix.\n",
+    "    \"\"\"Создает LU разложение матрицы `a`.\n",
     "    \n",
-    "    Naive LU decomposition: work column by column, accumulate elementary triangular matrices.\n",
-    "    No pivoting.\n",
+    "    Наивное LU разложение: работает столбец за столбцом, накапливает элементарные треугольные матрицы.\n",
+    "    Без выбора главного элемента.\n",
     "    \"\"\"\n",
     "    N = a.shape[0]\n",
     "    \n",
@@ -64,8 +64,7 @@
     }
    ],
    "source": [
-    "# Now, generate a full rank matrix and test the naive implementation\n",
-    "\n",
+    "# Теперь сгенерируем матрицу полного ранга и протестируем наивное разложение.\n",
     "import numpy as np\n",
     "\n",
     "N = 6\n",
@@ -85,7 +84,7 @@
    },
    "outputs": [],
    "source": [
-    "# Tweak the printing of floating-point numbers, for clarity\n",
+    "# Настройка вывода чисел с плавающей точкой для большей ясности\n",
     "np.set_printoptions(precision=3)"
    ]
   },
@@ -127,7 +126,7 @@
     "print(L, \"\\n\")\n",
     "print(u, \"\\n\")\n",
     "\n",
-    "# Quick sanity check: L times U must equal the original matrix, up to floating-point errors.\n",
+    "# Быстрый тест на адекватность: L @ U должна быть равна изначальной матрице с точностью до ошибок округления.\n",
     "print(L@u - a)"
    ]
   },
@@ -135,14 +134,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. The need for pivoting"
+    "# II. Необходимость выбора главного элемента"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's tweak the matrix a little bit, we only change a single element:"
+    "Давайте немного подправим матрицу, изменив в ней один элемент:"
    ]
   },
   {
@@ -161,7 +160,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Resulting matix still has full rank, but the naive LU routine breaks down."
+    "Результирующая матрица имеет полный ранг, но наивное LU разложение не работает."
    ]
   },
   {
@@ -217,11 +216,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.1\n",
+    "### Тест II.1\n",
     "\n",
-    "For a naive LU decomposition to work, all leading minors of a matrix should be non-zero. Check if this requirement is satisfied for the two matrices `a` and `a1`.\n",
+    "Для того, чтобы наивное LU разложение работало необходимо чтобы все лидирующие миноры матрицы были отличны от нуля. Проверьте, выполнено ли это требование для двух матриц `a` и `a1`.\n",
     "\n",
-    "(20% of the grade)"
+    "(20% оценки)"
    ]
   },
   {
@@ -239,15 +238,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.2\n",
+    "### Тест II.2\n",
     "\n",
-    "Modify the `diy_lu` routine to implement column pivoting. Keep track of pivots, you can either construct a permutation matrix, or a swap array (your choice).\n",
+    "Модифицируйте алгоритм `diy_lu`, чтобы осуществлять выбор главного элемента в столбцах. Для контроля выбора можете использовать матрицу перестановок или массив замен.\n",
     "\n",
-    "(40% of the grade)\n",
+    "(40% оценки)\n",
     "\n",
-    "Implement a function to reconstruct the original matrix from a decompositon. Test your routines on the matrices `a` and `a1`.\n",
+    "Напишите функию, воссоздающую изначальную матрицу из разложения. Протестируйте свой алгоритм на матрицах `a` и `a1`.\n",
     "\n",
-    "(40% of the grade)"
+    "(40% оценки)"
    ]
   },
   {
@@ -278,7 +277,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
