--- a/week_1_quadratic.ipynb
+++ b/week_1_quadratic.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Solve a quadratic equation, $x^2 + b x + c = 0$.\n",
+    "## Решите квадратное уравнение, $x^2 + b x + c = 0$.\n",
     "\n",
     "\n",
-    "Write a function which receives $b$ and $c$, the coefficients of a monic quadratic polynomial, $x^2 + b x + c$, and returns the pair of its roots. Your function should always return two values, even if quadratic has a double root.\n",
+    "Напишите функцию, получающую $b$ и $c$, коэффициенты квадратичного полинома $x^2 + b x + c$, и возвращающую пару корней уравнения. Ваша функция должна всегда возвращать два корня, даже когда решение вырождено.\n",
     "\n",
-    "For example, given a quadratic $x^2 - 2x + 1$, your function should return a pair of $(1, 1)$. Of course, in floating point, your answers may differ from an exact unity.\n",
+    "Например, дано квадратное уравнение $x^2 - 2x + 1$, ваша функция должна возвращать $(1, 1)$. Конечно, ответы могут отличаться ошибкой, связанной с плавающей точкой.\n",
     "\n",
-    "Your function also must correctly handle complex roots (to this end, you might need the `cmath` module from the standard library)."
+    "Также, ваша функция должна корректно выдавать комплексные решения (для этого вам может понадобиться модуль `cmath` из стандартной библиотеки)."
    ]
   },
   {
@@ -23,17 +23,17 @@
    "outputs": [],
    "source": [
     "def solve_quad(b, c):\n",
-    "    \"\"\"Solve a quadratic equation, x**2 + bx + c = 0.\n",
+    "    \"\"\"Решает квадратное уравнение, x**2 + bx + c = 0.\n",
     "    \n",
-    "    Parameters\n",
+    "    Parameteres\n",
     "    ----------\n",
     "    b, c : float\n",
-    "       Coefficients\n",
+    "       Коэффициенты\n",
     "       \n",
     "    Returns\n",
     "    -------\n",
     "    x1, x2 : float or complex\n",
-    "       Roots.\n",
+    "       Корни.\n",
     "    \"\"\"\n",
     "    # ... enter your code here ..."
    ]
@@ -42,11 +42,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test the your function on several examples against a calculation by hand. Once you're sure that your function works, try these five test cases below. \n",
+    "Проверьте работу алгоритма на нескольких примерах в сравнении с решением, полученным \"руками\". Когда вы убедитесь, что ваша функция работает, попробуйте следующие 5 примеров.\n",
     "\n",
-    "Note that the last two test cases are special: they test whether your function handles extreme cases where a too simple approach is prone to a catastrophic cancellation. Make sure your function passes all five tests.\n",
+    "Заметьте, что два последних теста специальны: они проверяют, насколько ваш алгоритм устойчив к экстремальным значениям, когда слишком наивный подход может привести к накоплению катастрофической ошибки. Убедитесь, что пройдены все пять тестов.\n",
     "\n",
-    "This exercise is graded, each test case contributes a 20% of the grade. "
+    "Данной задание также оценивается, за каждый пройденный тест вы получаете 20% оценки."
    ]
   },
   {
@@ -114,7 +114,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
