--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -17,22 +17,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I. Construct a Householder reflection of a vector."
+    "# Часть I. Постройте отражение Хаусхолдера для вектора."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Given a vector $\\mathbf{x}$, and a plane with a normal vector $\\mathbf{u}$, the Householder transformation reflects $\\mathbf{x}$ about the plane.\n",
+    "Дан вектор $\\mathbf{x}$ и плоскость, заданная вектором нормали $\\mathbf{u}$. Преобразование Хаусхолдера отражает $\\mathbf{x}$ относительно плоскости.\n",
     "\n",
-    "The matrix of the Householder transformation is\n",
+    "Матрица преобразований Хаусхолдера:\n",
     "\n",
     "$$\n",
     "\\mathbf{H} = \\mathbf{1} - 2 \\mathbf{u} \\mathbf{u}^T\n",
     "$$\n",
     "\n",
-    "Given two equal-length vectors $\\mathbf{x}$ and $\\mathbf{y}$, a rotation which brings $\\mathbf{x}$ to $\\mathbf{y}$ is a Householder transform with\n",
+    "Если даны два вектора $\\mathbf{x}$ и $\\mathbf{y}$ одинаковой длины, поворот, преобразующий $\\mathbf{x}$ в $\\mathbf{y}$ называется преобразованием Хаусхолдера с\n",
     "\n",
     "$$\n",
     "\\mathbf{u} = \\frac{\\mathbf{x} - \\mathbf{y}}{\\left|\\mathbf{x} - \\mathbf{y}\\right|}\n",
@@ -43,31 +43,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function which rotates a given vector, $\\mathbf{x} = (x_1, \\dots, x_n)$ into $\\mathbf{y} = (\\left|\\mathbf{x}\\right|, 0, \\dots, 0)^T$ using a Householder transformation."
+    "Напишите функцию, преобразующую заданный вектор $\\mathbf{x} = (x_1, \\dots, x_n)$ в $\\mathbf{y} = (\\left|\\mathbf{x}\\right|, 0, \\dots, 0)^T$, используя преобразование Хаусхолдера."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 3,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def householder(vec):\n",
-    "    \"\"\"Construct a Householder reflection to zero out 2nd and further components of a vector.\n",
-    "\n",
+    "    \"\"\"Создает отражение Хаусхолдера, преобразующее 2-ю, 3-ю и т.д. компоненты вектора vec в нули.\n",
+    "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    vec : array-like of floats, shape (n,)\n",
-    "        Input vector\n",
+    "        Введенный вектор\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
     "    outvec : array of floats, shape (n,)\n",
-    "        Transformed vector, with ``outvec[1:]==0`` and ``|outvec| == |vec|``\n",
+    "        Преобразованный вектор, причем ``outvec[1:]==0`` и ``|outvec| == |vec|``\n",
     "    H : array of floats, shape (n, n)\n",
-    "        Orthogonal matrix of the Householder reflection\n",
+    "        Ортогональная матрица отображений Хаусхолдера\n",
     "    \"\"\"\n",
     "    vec = np.asarray(vec, dtype=float)\n",
     "    if vec.ndim != 1:\n",
@@ -80,18 +78,25 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Test your function using tests below:"
+    "Протестируйте свою функцию на следующих примерах:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": true
+    "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "# Test I.1 (10% of the total grade).\n",
+    "# Тест I.1 (10% итоговой оценки).\n",
     "\n",
     "v = np.array([1, 2, 3])\n",
     "v1, h = householder(v)\n",
@@ -108,7 +113,7 @@
    },
    "outputs": [],
    "source": [
-    "# Test I.2 (10% of the total grade).\n",
+    "# Test I.2 (10% итоговой оценки).\n",
     "\n",
     "rndm = np.random.RandomState(1234)\n",
     "\n",
@@ -122,9 +127,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Compute the $\\mathrm{QR}$ decomposition of a matrix.\n",
+    "# Part II. Вычисление $\\mathrm{QR}$ разложения матрицы.\n",
     "\n",
-    "Given a rectangular $m\\times n$ matrix $\\mathbf{A}$, construct a Householder reflector matrix $\\mathbf{H}_1$ which transforms the first column of $\\mathbf{A}$ (and call the result $\\mathbf{A}^{(1)}$)\n",
+    "Дана прямоугольная $m\\times n$ матрица $\\mathbf{A}$. Выполните отражение Хаусхолдера матрицы $\\mathbf{H}_1$, преобразующее первый столбец матрицы $\\mathbf{A}$ (назовем результат $\\mathbf{A}^{(1)}$)\n",
     "\n",
     "$$\n",
     "\\mathbf{H}_1 \\mathbf{A} =%\n",
@@ -138,7 +143,7 @@
     "\\equiv \\mathbf{A}^{(1)}\\;.\n",
     "$$\n",
     "\n",
-    "Now consider the lower-right submatrix of $\\mathbf{A}^{(1)}$, and construct a Householder reflector which annihilates the second column of $\\mathbf{A}$:\n",
+    "Теперь рассмотрим нижнюю правую часть матрицы $\\mathbf{A}^{(1)}$ и выполним преобразование Хаусхолдера, действующее на 2 столбец $\\mathbf{A}$:\n",
     "\n",
     "$$\n",
     "\\mathbf{H}_2 \\mathbf{A}^{(1)} =%\n",
@@ -152,46 +157,44 @@
     "\\equiv \\mathbf{A}^{(2)} \\;.\n",
     "$$\n",
     "\n",
-    "Repeating the process $n-1$ times, we obtain\n",
+    "Повторяя процесс $n-1$ раз получим\n",
     "\n",
     "$$\n",
     "\\mathbf{H}_{n-1} \\cdots \\mathbf{H}_2 \\mathbf{H}_1 \\mathbf{A} = \\mathbf{R} \\;,\n",
     "$$\n",
     "\n",
-    "with $\\mathbf{R}$ an upper triangular matrix. Since each $\\mathbf{H}_k$ is orthogonal, so is their product. The inverse of an orthogonal matrix is orthogonal. Hence the process generates the $\\mathrm{QR}$ decomposition of $\\mathbf{A}$. "
+    "где $\\mathbf{R}$ верхнетреугольная матрица. Так как каждая $\\mathbf{H}_k$ ортогональна, таковым будет и их произведение. Обратная от ортогональной также есть матрица ортогональная. Таким образом, алгоритм создает $\\mathrm{QR}$ разложение матрицы $\\mathbf{A}$."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function, which receives a recangular matrix, $A$, and returns the Q and R factors of the $QR$ factorization of $A$."
+    "Напишите функцию, получающую прямоугольную матрицу $A$ и возвращающую Q и R - компоненты $QR$ разложения $A$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [],
    "source": [
     "def qr_decomp(a):\n",
-    "    \"\"\"Compute the QR decomposition of a matrix.\n",
+    "    \"\"\"Вычисляет QR разложение матрицы.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    a : ndarray, shape(m, n)\n",
-    "        The input matrix\n",
+    "        Введенная матрица\n",
     "    \n",
     "    Returns\n",
     "    -------\n",
     "    q : ndarray, shape(m, m)\n",
-    "        The orthogonal matrix\n",
+    "        Ортогональная матрица\n",
     "    r : ndarray, shape(m, n)\n",
-    "        The upper triangular matrix\n",
+    "        Верхнетреугольная матрица\n",
     "        \n",
-    "    Examples\n",
+    "    Example\n",
     "    --------\n",
     "    >>> a = np.random.random(size=(3, 5))\n",
     "    >>> q, r = qr_decomp(a)\n",
@@ -206,13 +209,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'np' is not defined",
+     "output_type": "error",
+     "traceback": []
+    }
+   ],
    "source": [
-    "# Might want to turn this on for prettier printing: zeros instead of `1e-16` etc\n",
+    "# можете запустить данную операцию для более краисвого вывода: нули вместо `1e-16` и т.д.\n",
     "\n",
     "np.set_printoptions(suppress=True)"
    ]
@@ -225,16 +235,16 @@
    },
    "outputs": [],
    "source": [
-    "# Test II.1 (20% of the total grade)\n",
+    "# Тест II.1 (20% итоговой оценки)\n",
     "\n",
     "rndm = np.random.RandomState(1234)\n",
     "a = rndm.uniform(size=(5, 3))\n",
     "q, r = qr_decomp(a)\n",
     "\n",
-    "# test that Q is indeed orthogonal\n",
+    "# тестируем, что Q ортогональна\n",
     "assert_allclose(np.dot(q, q.T), np.eye(5), atol=1e-10)\n",
     "\n",
-    "# test the decomposition itself\n",
+    "# проверяем разложение\n",
     "assert_allclose(np.dot(q, r), a)"
    ]
   },
@@ -242,7 +252,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now compare your decompositions to the library function (which actually wraps the corresponding LAPACK functions)"
+    "Теперь сравните ваше разложение с разложением, полученным библиотечной функцией (содержащей соответствующие функции библиотеки LAPACK)"
    ]
   },
   {
@@ -263,49 +273,49 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check if your `q` and `r` agree with `qq` and `rr`. Explain."
+    "Проверьте, согласуются ли ваши `q` и `r` с `qq` и `rr`. Объясните."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Enter your explanation here* (10% of the total grade, peer-graded)"
+    "*Оставьте пояснения здесь* (10% итоговой оценки)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part III. Avoid forming Householder matrices explicitly."
+    "# Часть III. Безматричный алгоритм."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Note the special structure of the Householder matrices: A reflector $\\mathbf{H}$ is completely specified by a reflection vector $\\mathbf{u}$. Also note that the computational cost of applying a reflector to a matrix strongly depends on the order of operations:\n",
+    "Отметим необычную структуру матрицы Хаусхолдера: матрица поворота $\\mathbf{H}$ полностью характеризуется вектором отражения $\\mathbf{u}$. Заметим, также, что вычислительная сложность операции отражения матрицы сильно зависит от порядка операций:\n",
     "\n",
     "$$\n",
     "\\left( \\mathbf{u} \\mathbf{u}^T \\right) \\mathbf{A}  \\qquad \\textrm{is } O(m^2 n)\\;,\n",
     "$$\n",
-    "while\n",
+    "тогда как\n",
     "$$\n",
     "\\mathbf{u} \\left( \\mathbf{u}^T \\mathbf{A} \\right) \\qquad \\textrm{is } O(mn)\n",
     "$$\n",
     "\n",
-    "Thus, it seems to make sense to *avoid* forming the $\\mathbf{H}$ matrices. Instead, one stores the reflection vectors, $\\mathbf{u}$, themselves, and provides a way of multiplying an arbitrary matrix by $\\mathbf{Q}^T$, e.g., as a standalone function (or a class)."
+    "Так, кажется, что имеет смысл *избегать* формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс)."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function which constructs the `QR` decomposition of a matrix *without ever forming the* $\\mathbf{H}$ matrices, and returns the $\\mathbf{R}$ matrix and reflection vectors. \n",
+    "Напишите функцию, выполняющую `QR` разложение матрицы *без формирования* матриц $\\mathbf{H}$ и возвращающую матрицу $\\mathbf{R}$, а также вектор отражения. \n",
     "\n",
-    "Write a second function, which uses reflection vectors to multiply a matrix with $\\mathbf{Q}^T$. Make sure to include enough comments for a marker to follow your implementation, and add tests. \n",
+    "Напишите вторую функцию, которая использует вектор отражения чтобы перемножить матрицу с $\\mathbf{Q}^T$. Убедитесь, что вы добавили достаточно комментариев, следующих вашим выкладкам. Напишите тесты.\n",
     "\n",
-    "(Peer-graded, 40% of the total grade)"
+    "(40% итоговой оценки)"
    ]
   },
   {
@@ -334,7 +344,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
