--- a/week_3_newton_fixed_pt.ipynb
+++ b/week_3_newton_fixed_pt.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I. Root-finding. Newton's iteration."
+    "# Часть I. Нахождение корней. Метод Ньютона."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function which performs Newton's iteration for a given function $f(x)$ with known derivative $f'(x)$. Your function should find the root of $f(x)$ with a predefined absolute accuracy $\\epsilon$. "
+    "Напишите алгоритм, который выполняет итерации Ньютона для заданной функции $f(x)$ с известной производной $f'(x)$. Ваша функция должна находить корни $f(x)$ с заданной точностью $\\epsilon$."
    ]
   },
   {
@@ -23,31 +23,31 @@
    "outputs": [],
    "source": [
     "def newton_iteration(f, fder, x0, eps=1e-5, maxiter=1000):\n",
-    "    \"\"\"Find a root of $f(x) = 0$ via Newton's iteration starting from x0.\n",
+    "    \"\"\"Нахождение корней $f(x) = 0$ через итерации Ньютона, начиная с x0.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    f : callable\n",
-    "        The function to find a root of.\n",
+    "        Функция, корни которой мы хотим найти.\n",
     "    fder : callable\n",
-    "        The derivative of `f`.\n",
+    "        Производная `f`.\n",
     "    x0 : float\n",
-    "        Initial value for the Newton's iteration.\n",
+    "        Начальное приближение итераций Ньютона.\n",
     "    eps : float\n",
-    "        The target accuracy. \n",
-    "        The iteration stops when the distance between successive iterates is below `eps`.\n",
-    "        Default is 1e-5.\n",
+    "        Заданная точность. \n",
+    "        Алгоритм прекращает работу когда расстояние между последовательными приближениями меньше `eps`.\n",
+    "        По умолчанию 1e-5.\n",
     "    maxiter : int\n",
-    "        The maximum number of iterations (default is 1000.)\n",
-    "        Iterations terminate if the number of iterations exceeds `maxiter`.\n",
-    "        This parameter is only needed to avoid infinite loops if iterations wander off.\n",
-    "        \n",
+    "        Максимальное число итераций (по умолчанию 1000.)\n",
+    "        Алгоритм прекращается, когда число итераций достигает `maxiter`.\n",
+    "        Этот параметр нужен лишь для предотвращения бесконечного зацикливания.\n",
+    "    \n",
     "    Returns\n",
     "    -------\n",
     "    x : float\n",
-    "        The estimate for the root.\n",
+    "        Найденное приближение к корню.\n",
     "    niter : int\n",
-    "        The number of iterations.\n",
+    "        Количество итерацй.\n",
     "    \"\"\"\n",
     "    # ... ENTER YOUR CODE HERE ..."
    ]
@@ -56,9 +56,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.1 \n",
+    "### Тест I.1 \n",
     "\n",
-    "Test your implementation on a simple example, $f(x) = x^2 - 1$ or similar. (20% of the total grade)"
+    "Протестируйте вашу функцию на простом примере  $f(x) = x^2 - 1$ (или похожем). (20% итоговой оценки)."
    ]
   },
   {
@@ -76,15 +76,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.2\n",
+    "### Тест I.2\n",
     "\n",
-    "Now consider a function which has a multiple root. Take $f(x) = (x^2 - 1)^2$ as an example. Implement a modified Newton's iteraion,\n",
+    "Теперь рассмотрим функцию, имеющую кратные корни. Возьмем $f(x) = (x^2 - 1)^2$ в качестве примера. Применим модифицированный алгоритм итераций Ньютона:\n",
     "\n",
     "$$\n",
     "x_{n+1} = x_{n} - m \\frac{f(x_n)}{f'(x_n)}\n",
     "$$\n",
     "\n",
-    "and vary $m= 1, 2, 3, 4, 5$. Check the number of iterations required for convergence within a fixed $\\epsilon$. Are your observations consistent with the expectation that the convergence is quadratic is $m$ equals the multiplicity of the root, and is linear otherwise? (40% of the total grade)"
+    "и проварьируем $m= 1, 2, 3, 4, 5$. Проверьте количество итераций необходимых для сходимости в пределах фиксированного $\\epsilon$. Cогласуются ли ваши наблюдения с ожиданием того, что сходимость будет квадратичной, если $m$ совпадает с количеством корней и линейной в других случаях. (40% итоговой оценки)."
    ]
   },
   {
@@ -102,36 +102,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part II. Fixed-point iteration"
+    "# Часть II. Метод простой итерации."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider the following equation:\n",
+    "Рассмотрим следующее уравнение:\n",
     "\n",
     "$$\n",
     "\\sqrt{x} = \\cos{x}\n",
     "$$\n",
     "\n",
-    "Plot the left-hand side and right-hand side of this equation, and localize the root graphically. Estimate the location of the root by visual inspection of the plot.\n",
+    "Постройте левую и правую часть уравнения и оцените решение графически. Оцените локализацию корня \"на глаз\".\n",
     "\n",
-    "Write a function which finds the solution using fixed-point iteration up to a predefined accuracy $\\epsilon$. Compare the result to an estimate from a visual inspection.\n",
+    "Напишите функцию, находящую решение, используя метод простой итерации в пределах погрешности $\\epsilon$. Сравните результат с визуальной оценкой.\n",
     "\n",
-    "Next, rewrite the fixed-point problem in the form\n",
+    "Далее перепишите задачу простой итерации в форме\n",
     "\n",
     "$$\n",
     "x = x - \\alpha f(x)\n",
     "$$\n",
     "\n",
-    "where $\\alpha$ is the free parameter. Check the dependence of the number of iterations required for a given $\\epsilon$ on $\\alpha$. Compare your results to an expectation that the optimal value of $\\alpha$ is given by \n",
+    "где $\\alpha$ свободный параметр. Проверьте зависимость количества итераций необходимых для заданой $\\epsilon$ от $\\alpha$. Сравните результат с ожидаемым значением оптимального $\\alpha$\n",
     "\n",
     "$$\n",
     "\\alpha = \\frac{2}{m + M}\n",
     "$$\n",
     "\n",
-    "where $0 < m < |f'(x)| < M$ over the localization interval. (40% of the total grade)"
+    "где $0 < m < |f'(x)| < M$ вне интервала локлизации. (40% итоговой оценки)"
    ]
   },
   {
@@ -149,22 +149,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part III. Newton's fractal.\n",
+    "# Part III. Фракталы Ньютона.\n",
     "\n",
-    "(Not graded). \n",
+    "(Без оценки). \n",
     "\n",
-    "Consider the equation\n",
+    "Рассмотрим уравнение\n",
     "\n",
     "$$\n",
     "x^3 = 1\n",
     "$$\n",
     "\n",
-    "It has three solutions in the complex plane, $x_k = \\exp(i\\, 2\\pi k/ 3)$, $k = 0, 1, 2$.\n",
+    "Оно имеет три решения на комплексной плоскости, $x_k = \\exp(\\frac{2\\pi i\\,k}{3})$, $k = 0, 1, 2$.\n",
     "\n",
-    "The Newton's iterations converge to one of these solutions, depending on the starting point in the complex plane (to converge to a complex-valued solution, the iteration needs a complex-valued starting point).\n",
+    "Итерации Ньютона сходятся к одному из них в зависимости от начального приближения на комплексной плоскости (для сходимости, естественно, начальное приближение должно иметь ненулевую мнимую часть. начальную точку.\n",
     "\n",
-    "Plot the \\emph{basins of attraction} of these roots on the complex plane of $x$ (i.e., on the plane $\\mathrm{Re}x$ -- $\\mathrm{Im}x$). To this end, make a series of calculations, varying the initial conditions on a grid of points. \n",
-    "Color the grid in three colors, according to the root, to which iterations converged."
+    "Постройте области сходимости к различным корням на комплексной плоскости $x$ (В сущности на плоскости $\\mathrm{Re}x$ -- $\\mathrm{Im}x$). Выполните ряд вычислений, варьируя начальные приближения на сетке значений. Раскрасьте плоскость в три цвета в соответствии с корнем, к которому сходится решение."
    ]
   },
   {
@@ -193,7 +192,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
