--- a/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
+++ b/week_4_iterative_linalg_Jacobi_Seidel_minres.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Simple iteration for systems of linear equations"
+    "# Метод простой итерации для системы линейных уравнений"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "First, generate a random diagonally dominant matrix, for testing."
+    "Для начала создадим случайную матрицу с диагональным доминированием."
    ]
   },
   {
@@ -34,34 +34,34 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I.  Jacobi iteration\n",
+    "# I.  Итерации Якоби\n",
     "\n",
-    "Given\n",
+    "Задано\n",
     "\n",
     "$$\n",
     "A x = b\n",
     "$$\n",
     "\n",
-    "separate the diagonal part $D$,\n",
+    "Отделим диагональную часть $D$,\n",
     "\n",
     "$$ A = D + (A - D) $$\n",
     "\n",
-    "and write\n",
+    "и напишем\n",
     "\n",
     "$$\n",
     "x = D^{-1} (D - A) x + D^{-1} b\\;.\n",
     "$$\n",
     "\n",
-    "Then iterate\n",
+    "далее зациклим\n",
     "\n",
     "$$\n",
     "x_{n + 1} = B x_{n} + c\\;,\n",
     "$$\n",
     "\n",
-    "where \n",
+    "где\n",
     "\n",
     "$$\n",
-    "B = D^{-1} (A - D) \\qquad \\text{and} \\qquad c = D^{-1} b\n",
+    "B = D^{-1} (A - D) \\qquad \\text{и} \\qquad c = D^{-1} b\n",
     "$$\n"
    ]
   },
@@ -69,7 +69,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Let's construct the matrix and the r.h.s. for the Jacobi iteration"
+    "Создадим матрицу и правую часть уравнения для итераций Якоби"
    ]
   },
   {
@@ -95,13 +95,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sanity checks\n",
+    "# проверка на адекватность\n",
     "from numpy.testing import assert_allclose\n",
     "\n",
     "assert_allclose(-B + D, A)\n",
     "\n",
     "\n",
-    "# xx is a \"ground truth\" solution, compute it using a direct method\n",
+    "# xx есть точное решение, вычислим его, используя прямой метод\n",
     "xx = np.linalg.solve(A, b)\n",
     "\n",
     "np.testing.assert_allclose(A@xx, b)\n",
@@ -113,7 +113,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Check that $\\| B\\| \\leqslant 1$:"
+    "Проверьте, что $\\| B\\| \\leqslant 1$:"
    ]
   },
   {
@@ -140,7 +140,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Do the Jacobi iteration"
+    "### Выполните итерации Якоби"
    ]
   },
   {
@@ -179,7 +179,7 @@
     }
    ],
    "source": [
-    "# Check the result:\n",
+    "# Проверка результата:\n",
     "\n",
     "A @ x - b"
    ]
@@ -190,13 +190,12 @@
    "source": [
     "### Task I.1\n",
     "\n",
-    "Collect the proof-of-concept above into a single function implementing the Jacobi iteration. This function should receive the r.h.s. matrix $A$, the l.h.s. vector `b`, and the number of iterations to perform.\n",
+    "Используя отдельные элементы выше, составьте единую функцию, реализующую итерацию Якоби. Такая функция должна получать матрицу $A$, вектор $b$ и количество итераций для цикла. \n",
     "\n",
+    "Матрица $A$ в иллюстрации выше диагонально доминирующая по построению.\n",
+    "Что произойдет, если уменьшить значения диагональных элементов $A$? Проверьте сходимость итерации Якоби, а также значение нормы $B$.\n",
     "\n",
-    "The matrix $A$ in the illustration above is strongly diagonally dominant, by construction. \n",
-    "What happens if the diagonal matrix elements of $A$ are made smaller? Check the convergence of the Jacobi iteration, and check the value of the norm of $B$.\n",
-    "\n",
-    "(20% of the total grade)\n"
+    "(20% итоговой оценки)\n"
    ]
   },
   {
@@ -214,20 +213,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# II. Seidel's iteration."
+    "# II. Метод итераций Зейделя."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Task II.1\n",
+    "##### Задание II.1\n",
     "\n",
-    "Implement the Seidel's iteration. \n",
+    "Напишите алгоритм, использующий итерации Зейделя. \n",
     "\n",
-    "Test it on a random matrix. Study the convergence of iterations, relate to the norm of the iteration matrix.\n",
+    "Проверьте на случайной матрице. Проверьте сходимость.\n",
     "\n",
-    "(30% of the total grade)"
+    "(30% итоговой оценки)"
    ]
   },
   {
@@ -245,18 +244,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# III. Minimum residual scheme"
+    "# III. Схема минимальных невязок."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Task III.1\n",
+    "### Задание III.1\n",
     "\n",
-    "Implement the $\\textit{minimum residual}$ scheme: an explicit non-stationary method, where at each step you select the iteration parameter $\\tau_n$ to minimize the residual $\\mathbf{r}_{n+1}$ given $\\mathbf{r}_n$. Test it on a random matrix, study the convergence to the solution, in terms of the norm of the residual and the deviation from the ground truth solution (which you can obtain using a direct method). Study how the iteration parameter $\\tau_n$ changes as iterations progress.\n",
+    "Реализуйте \"$\\textit{minimum residual}$ scheme\": явный нестационарный метод, который на каждом шаге выбирает параметр итерации $\\tau_n$, чтобы минимизировать невязку $\\mathbf{r}_{n+1}$ с заданным $\\mathbf{r}_n$. Протестируйте алгоритм на случайной матрице, проверьте сходимость к решению в терминах нормы невязки и отклонения от точного решения (который вы можете получить прямым методом). Изучите, как параметр $\\tau_n$ влияет на итерационный процесс.\n",
     "\n",
-    "(50% of the grade)"
+    "(50% итоговой оценки)"
    ]
   },
   {
@@ -287,7 +286,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
