--- a/week_6_calculus.ipynb
+++ b/week_6_calculus.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part I. One-sided finite differences"
+    "# Часть I. Односторонние разностные схемы."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function, `deriv`, which computes a derivative of its argument at a given point, $x$, using a one-sided finite difference rule with a given step side $h$, with the approximation order of $O(h^2)$. "
+    "Напишите функцию `deriv`, которая вычисляет производную аргумента в заданной точке $x$, используя односторонню разностную схему с заданным шагом $h$ и степенью аппроксимации $O(h^2)$."
    ]
   },
   {
@@ -23,22 +23,21 @@
    "outputs": [],
    "source": [
     "def deriv(f, x, h):\n",
-    "    \"\"\" Compute a derivative of `f` at point `x` with step size `h`.\n",
-    "    \n",
-    "    Compute the derivative using the one-sided rule of the approximation order of $O(h^2)$.\n",
+    "    \"\"\" Вычисляет производную `f` в точке `x` с шагом `h`.\n",
+    "    Вычисляет производную, используя односторонню разностную схему со степенью аппроксимации $O(h^2)$.\n",
     "    \n",
     "    Parameters\n",
     "    ----------\n",
     "    f : callable\n",
-    "        The function to differentiate\n",
+    "        Функция, которую нужно продифференцировать\n",
     "    x : float\n",
-    "        The point to compute the derivative at.\n",
+    "        Точка, в которой нужно дифференцировать функцию\n",
     "    h : float\n",
-    "        The step size for the finite different rule.\n",
+    "        Шаг\n",
     "        \n",
-    "    Returns\n",
+    "    Rerurns\n",
     "    -------\n",
-    "    fder : derivative of f(x) at point x using the step size h.\n",
+    "    fder : производная f(x) в точке x с шагом h.\n",
     "    \"\"\"\n",
     "    # ... ENTER YOUR CODE HERE ..."
    ]
@@ -47,11 +46,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test I.1\n",
+    "#### Тест I.1\n",
     "\n",
-    "Test your function on a simple test case: differentiate $f(x) = x^3$ at $x=0$. Comment on whether your results are consistent with the expected value of $f'(x) = 0$ and on an expected scaling with $h\\to 0$.\n",
+    "Проверьте ваш алгоритм на простом примере: продифференцируйте $f(x) = x^3$ в точке $x=0$. Прокомментируйте, совпадает ли результат с ожидаемым $f'(x) = 0$ при стремлении $h\\to 0$.\n",
     "\n",
-    " (10% of the total grade)"
+    " (10% итоговой оценки)"
    ]
   },
   {
@@ -77,10 +76,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.2\n",
+    "### Тест I.2\n",
     "\n",
-    "Now use a slightly more complicated function, $f(x) = x^2 \\log{x}$, evaluate the derivative at $x=1$ using your one-sided rule and a two-point one-sided rule. Roughly estimate the value of $h$ where the error stops decreasing, for these two schemes. \n",
-    "(15% of the total grade)"
+    "Теперь попробуйте немного более сложную функцию $f(x) = x^2 \\log{x}$. Оцените значение производной в точке $x=1$, используя двухточечную и трехточечную схемы. Для обеих схем оцените значение $h$, при котором ошибка перестанет падать.\n",
+    "\n",
+    "(15% итоговой оценки)"
    ]
   },
   {
@@ -113,10 +113,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.3 \n",
+    "### Тест I.3 \n",
     "\n",
-    "Now try differentiating $x^2 \\log(x)$ at $x=0$. Use the three-point one-sided rule. Note that to evaluate the function at zero, you need to special-case this value. Check the scaling of the error with $h$, explain your results. \n",
-    "(25% of the total grade)"
+    "Теперь продифференцируйте $x^2 \\log(x)$ в $x=0$. Используйте трехточечную схему. Заметьте, что В нуле функцию нужно доопределить явным образом. Проверьте шкалированные ошибки. Объясните полученные результаты.\n",
+    "\n",
+    "(25% итоговой оценки)"
    ]
   },
   {
@@ -127,7 +128,7 @@
    "source": [
     "def f(x):\n",
     "    if x == 0:\n",
-    "        # the limit of $x^2 log(x)$ at $x-> 0$ is zero, even though log(x) is undefined at x=0\n",
+    "        # предел $x^2 log(x)$ при $x-> 0$ равен нулю, хотя log(x) не определен в x=0\n",
     "        return 0.0\n",
     "    else:\n",
     "        return x**2 * log(x)\n",
@@ -162,7 +163,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Write a function which computes a definite integral using the midpoint rule up to a given error, $\\epsilon$. Estimate the error by comparing the estimates of the integral at $N$ and $2N$ elementary intervals. "
+    "Напишите функцию, вычисляющую определенный интеграл, используя \"midpoint rule\", с точностью до заданной погрешности $\\epsilon$. Оцените ошибку, сравнивая значения интеграла для $N$ и $2N$ элементарных интервалов."
    ]
   },
   {
@@ -174,23 +175,23 @@
    "outputs": [],
    "source": [
     "def midpoint_rule(func, a, b, eps):\n",
-    "    \"\"\" Calculate the integral of f from a to b using the midpoint rule.\n",
+    "    \"\"\" Вычисляет интеграл f от a до b используя \"midpoint rule\".\n",
     "    \n",
-    "    Parameters\n",
+    "    Параметры\n",
     "    ----------\n",
     "    func : callable\n",
-    "        The function to integrate.\n",
+    "        Функция, которую нужно проинтегрировать\n",
     "    a : float\n",
-    "        The lower limit of integration.\n",
+    "        Нижний предел интегрирования\n",
     "    b : float\n",
-    "        The upper limit of integration.\n",
+    "        Верхний предел интегрирования\n",
     "    eps : float\n",
-    "        The target accuracy of the estimate.\n",
+    "        Ожидаемая ошибка оценки\n",
     "        \n",
-    "    Returns\n",
+    "    Возвращает\n",
     "    -------\n",
     "    integral : float\n",
-    "        The estimate of $\\int_a^b f(x) dx$.\n",
+    "        Оценка интеграла $\\int_a^b f(x) dx$.\n",
     "    \"\"\"\n",
     "    # ... ENTER YOUR CODE HERE ..."
    ]
@@ -199,14 +200,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.1\n",
+    "### Тест II.1\n",
     "\n",
-    "Test your midpoint rule on a simple integral, which you can calculate by paper and pencil.\n",
+    "Протестирутйте ваш алгоритм на простом интеграле, который вы можете посчитать аналитически.\n",
     "\n",
-    "Compare the rate of convergence to the expected $O(N^{-2})$ scaling by studying the number of intervals required for a given accuracy $\\epsilon$.\n",
+    "Сравните скорость сходимости с ожидаемой $O(N^{-2})$ в зависимости от количества интервалов, необходимых для заданной точности $\\epsilon$.\n",
     "\n",
-    "Compare the numerical results to the value you calculated by hand. Does the deviation agree with your estimate of the numerical error?\n",
-    "(20% of the total grade)\n"
+    "Сравните полученный результат с ответом, вычисленным руками. Попадает ли результат в интервал заданной ошибки?\n",
+    "\n",
+    "(20% итоговой оценки)\n"
    ]
   },
   {
@@ -220,19 +222,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.2\n",
+    "### Тест II.2\n",
     "\n",
-    "Now use your midpoint rule to compute the value of\n",
+    "Используя ваш алгоритм, посчитайте значение\n",
     "\n",
     "$$\n",
     "\\int_0^1\\! \\frac{\\sin{\\sqrt{x}}}{x}\\, dx\n",
     "$$\n",
     "\n",
-    "up to a predefined accuracy of $\\epsilon=10^{-4}$.\n",
+    "с точностью до $\\epsilon=10^{-4}$.\n",
     "\n",
-    "Note that the integral contains an integrable singularity at the lower limit. Do calculations two ways: first, do a straightforward computation; next, subtract the singularity. Compare the number of iterations required to achieve the accuracy of $\\epsilon$.\n",
+    "Заметим, что интеграл содержит интегрируемую особенность в нижнем пределе. Выполните вычисление двумя способами: во первых, посчитайте интеграл \"в лоб\", во вторых, вычтите особенность из подынтегрального выражения. Сравните количество необходимых итераций для достижения заданной точности $\\epsilon$.\n",
     "\n",
-    "(30% of the total grade)"
+    "(30% итоговой оценки)"
    ]
   },
   {
@@ -272,7 +274,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
