--- a/week_7_IVP_ODE.ipynb
+++ b/week_7_IVP_ODE.ipynb
@@ -4,24 +4,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Initial value problem for ODEs"
+    "# Задача Коши для ОДУ"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# I. Euler's method for a first order ODE\n",
+    "# I. Метод Эйлера для ОДУ первого порядка.\n",
     "\n",
-    "Consider a first order equation\n",
+    "Рассмотрим уравнение первого порядка\n",
     "\n",
     "$$\n",
     "\\frac{d u}{d t} = \\lambda u\n",
     "$$\n",
     "\n",
-    "with the initial condition $u(t=0) = u_0$.\n",
+    "С начальным условием $u(t=0) = u_0$.\n",
     "\n",
-    "Here is a simple illustration of solving this equation with the explicit Euler method."
+    "Далее представлена простая иллюстрация явного метода Эйлера для решения такого уравнения."
    ]
   },
   {
@@ -46,7 +46,7 @@
    "outputs": [],
    "source": [
     "def euler_solve(lam, u0, T, dt):\n",
-    "    \"\"\"Solve $du/dt = \\lambda u$ on $0 < t < T$ with $u(t=0) = u0$ via an explicit Euler method.\"\"\"\n",
+    "    \"\"\"Решает $du/dt = \\lambda u$ на $0 < t < T$ с $u(t=0) = u0$ при помощи явного метода Эйлера.\"\"\"\n",
     "    num_steps = int(T/dt)\n",
     "    tt = np.arange(num_steps+1)*dt\n",
     "    y = np.empty(num_steps+1)\n",
@@ -864,11 +864,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.1\n",
+    "### Тест I.1\n",
     "\n",
-    "Test the function above for varying step size $\\tau$ (in the code it's `dt`), including $|\\lambda| \\tau > 1$? \n",
+    "Проверьте функцию выше, варьируя шаг $\\tau$ (в коде это `dt`), $|\\lambda| \\tau > 1$.\n",
     "\n",
-    "(10% of the grade)"
+    "(10% итоговой оценки)"
    ]
   },
   {
@@ -886,11 +886,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test I.2\n",
+    "### Тест I.2\n",
     "\n",
-    "Implement a function for solving the same equation, $du/dt = \\lambda u$ using the implicit Euler scheme. Compare the behavior of the implicit and explicit Euler schemes. Discuss.\n",
+    "Решите то же самое уравнение $du/dt = \\lambda u$, используя невную схему Эйлера. Сравните поведение неянвой и явной схем Эйлера. Обсудите.\n",
     "\n",
-    "(10% of the grade)"
+    "(10% итогвой оценки)"
    ]
   },
   {
@@ -908,22 +908,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## II. Stiff systems."
+    "## II. Жесткие системы."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Consider a system of two first order equations\n",
+    "Рассмотрим систему двух уравнений первого порядка.\n",
     "\n",
     "$$\n",
     "\\frac{d \\mathbf{u} }{d t} = A \\mathbf{u}\n",
     "$$\n",
     "\n",
-    "where $\\mathbf{u}$ is a two-dimensional vector, and $A$ is a known constant 2$\\times$2 matrix.\n",
+    "где $\\mathbf{u}$ есть вектор длины 2, $A = const$ - известная матрица 2$\\times$2.\n",
     "\n",
-    "Implement a generalization of `euler_solve` routine for solving a system of linear first-order equations with time-independent matrix $A$ using the explicit Euler's method."
+    "Выполните обобщение алгоритма `euler_solve` для решения систем линейных уравнений первого порядка с матрицей $A$, не зависящей от времени, используя явную схему Эйлера."
    ]
   },
   {
@@ -941,20 +941,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.1\n",
+    "### Тест II.1\n",
     "\n",
-    "Take \n",
+    "Возьмите \n",
     "$$\n",
     "A = \\begin{bmatrix} -10 & 10 \\\\ 32 & -499 \\end{bmatrix}\n",
     "$$\n",
     "\n",
-    "and the initial condition $\\mathbf{u} = (1, 0)^T$.\n",
+    "с начальным условием $\\mathbf{u} = (1, 0)^T$.\n",
     "\n",
-    "Solve the system using a fixed step size $\\tau=0.01$. Is the explicit Euler's method stable at this value of the step size?\n",
+    "Решите систему, используя фиксированный шаг $\\tau=0.01$. Стабилен ли метод на шаге такого размера?\n",
     "\n",
-    "Find eigenvalues of $A$ (use `np.linalg.eigvals`) and comment whether the system is stif.\n",
+    "Найдите собственные значения $A$ (используя `np.linalg.eigvals`) и прокомментируйте, является ли система жесткой.\n",
     "\n",
-    "(20% of the grade)"
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -972,13 +972,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test II.2\n",
+    "### Тест II.2\n",
     "\n",
-    "Implement the $\\textit{implicit}$ Euler's scheme for a system of first-order equations with constant coefficients. Note that at each time step you need to solve a system of linear algebraic equations, use `np.linalg.solve` for that.\n",
+    "Реализуйте $\\textit{неявную}$ схему Эйлера для системы линейных уравнений первого порядка с постоянными коэффициентами. Заметьте, что на каждом шаге вам необходимо решать систему линйных алгебраических уравнений (используйте `np.linalg.solve`).\n",
     "\n",
-    "Use this routine to solve the system from Test II.1 at the same step size $\\tau=0.01$. Compare solutions obtained by an explicit and an implicit Euler's methods.\n",
+    "Выполните те же самые шаги, что и в тесте II.1 с таким же шагом $\\tau=0.01$. Сравните решения, полученные явной и неявной схемами Эйлера.\n",
     "\n",
-    "(20% of the grade)"
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -998,27 +998,29 @@
     "collapsed": true
    },
    "source": [
-    "# III. Second order ODEs.\n",
+    "# III. ОДУ второго порядка.\n",
     "\n",
-    "Consider a second order ODE, which describes a oscillating pendulum\n",
+    "Рассмотрим ОДУ второго порядка, описывающее осцилляции маятника\n",
     "\n",
     "$$\n",
     "\\frac{d^2 u}{dt^2} + \\omega^2 u = 0\n",
     "$$\n",
     "\n",
-    "Convert this second order ODE into a system of two first order ODEs.\n",
+    "Преобразуйте данное уравнение второго порядка в систему ОДУ первого порядка.\n",
     "\n",
-    "### Test III.1 \n",
+    "### Тест III.1 \n",
     "\n",
-    "Solve this system of equations using the explicit Euler's method over a time interval which includes at least several periods. We know that the equation of motion conserves energy, so that\n",
+    "Решите данную систему уравнений, используя явную  схему Эйлера так, чтобы ответ захватывал хотя бы несколько периодов осциллятора. \n",
+    "\n",
+    "Мы знаем, что в отсутствии трения выполняется закон сохранения энергии:\n",
     "\n",
     "$$\n",
     "E = \\frac{u'^2}{2} + \\frac{\\omega^2 u^2}{2}\n",
     "$$\n",
     "\n",
-    "should remain constant. Plot the dependence of $E$ on time for your numeric solution. Use several values of the time step. Does your discretized scheme conserve energy?\n",
+    "Постройте зависимость $E$ от времени для вашего численного решения. Используйте несколько значений шага. Выполняетс ли закон сохранения энергии?\n",
     "\n",
-    "(20% of the grade)"
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -1036,11 +1038,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Test III.2\n",
+    "### Тест III.2\n",
     "\n",
-    "Implement the 2nd order Runge-Kutta scheme. Use it to solve the same equation with same time steps. Compare solutions produced by the RK method and the Euler's method at the same values of the time step. Check conservation of energy. Discuss.\n",
+    "Реализуйте схему Рунге - Кутта второго порядка. Используте ее для решения того же уравнения с теми же шагами. Сравните решения, полученные методом Рунге - Кутта и методом Эйлера на одинаковых промежутках времени. Проверьте закон сохранения энергии. Обсудите.\n",
     "\n",
-    "(20% of the grade)"
+    "(20% итоговой оценки)"
    ]
   },
   {
@@ -1071,7 +1073,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
