--- a/week_2_Householder_QR.ipynb
+++ b/week_2_Householder_QR.ipynb
@@ -65,7 +65,7 @@
     "    outvec : array of floats, shape (n,)\n",
     "        Преобразованный вектор, причем ``outvec[1:]==0`` и ``|outvec| == |vec|``\n",
     "    H : array of floats, shape (n, n)\n",
-    "        Ортогональная матрица отображений Хаусхолдера\n",
+    "        Ортогональная матрица отражений Хаусхолдера\n",
     "    \"\"\"\n",
     "    vec = np.asarray(vec, dtype=float)\n",
     "    if vec.ndim != 1:\n",
@@ -91,8 +91,7 @@
     {
      "ename": "NameError",
      "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": []
+     "output_type": "error"
     }
    ],
    "source": [
@@ -217,12 +216,11 @@
     {
      "ename": "NameError",
      "evalue": "name 'np' is not defined",
-     "output_type": "error",
-     "traceback": []
+     "output_type": "error"
     }
    ],
    "source": [
-    "# можете запустить данную операцию для более краисвого вывода: нули вместо `1e-16` и т.д.\n",
+    "# можете запустить данную операцию для более крсивого вывода: нули вместо `1e-16` и т.д.\n",
     "\n",
     "np.set_printoptions(suppress=True)"
    ]
@@ -287,7 +285,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Часть III. Безматричный алгоритм."
+    "# Часть III. Безматричная реализация."
    ]
   },
   {
@@ -304,7 +302,7 @@
     "\\mathbf{u} \\left( \\mathbf{u}^T \\mathbf{A} \\right) \\qquad \\textrm{is } O(mn)\n",
     "$$\n",
     "\n",
-    "Так, кажется, что имеет смысл *избегать* формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс)."
+    "Таким образом, следует *избегать* формирований матриц $\\mathbf{H}$. Вместо этого можно сохранять сами векторы отражения $\\mathbf{u}$ и производить умножение произвольной матрицы на $\\mathbf{Q}^T$, например, как отдельную функцию (класс)."
    ]
   },
   {
