--- a/week_5_intep_approx.ipynb
+++ b/week_5_intep_approx.ipynb
@@ -108,7 +108,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### I.III. МНК с использовнием QR - разложение.\n",
+    "### I.III. МНК с использовнием QR - разложениея.\n",
     "\n",
     "Для оптимального значения $m$ из предыдущей части решите задачу МНК, используя безматричную реализацию QR - разложения. Для решения задач линейной алгебры можете использовать библиотечные функции (обратите внимание на `numpy.linalg.solve`, `numpy.linalg.qr` и т.д.) или используйте код предыдущих недель.\n",
     "Сравните результат с ответом, полученным при решении системы уравнений.\n",
